--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   		<link href="css/mag42.css" rel="stylesheet" type="text/css" />
         <link href="css/sencha-touch.css" rel="stylesheet" type="text/css" />
 
-        <script src="javascript/sencha-touch.js" type="text/javascript"></script>
+        <script src="javascript/sencha-touch-debug.js" type="text/javascript"></script>
 		<script src="javascript/TagPanel.js" type="text/javascript"></script>
 		<script src="javascript/PinchLayer.js" type="text/javascript"></script>
         <script src="javascript/index.js" type="text/javascript"></script>
