--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="javascript/sencha-touch-debug.js" type="text/javascript"></script>
 		<script src="javascript/TagPanel.js" type="text/javascript"></script>
 		<script src="javascript/PinchLayer.js" type="text/javascript"></script>
+		<script src="javascript/CustomSwipeGesture.js" type="text/javascript"></script>
         <script src="javascript/index.js" type="text/javascript"></script>
        
     </head>
