- sergios und mein code gemerged - edit switcher eingebaut - wechselt jetzt richtig zw edit und view mode
bug:
- drag bug duerfte von sencha sein, geht immer nur bis zu x-pos

Change-Id: I950f10bc2085f327896c6b3510c4b92a5c955fac

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   		<link href="css/mag42.css" rel="stylesheet" type="text/css" />
         <link href="css/sencha-touch.css" rel="stylesheet" type="text/css" />
 
-        <script src="javascript/sencha-touch-debug.js" type="text/javascript"></script>
+        <script src="javascript/sencha-touch.js" type="text/javascript"></script>
+        <script src="javascript/DebugPanel.js" type="text/javascript"></script>
+        <script src="javascript/globals.js" type="text/javascript"></script>
 		<script src="javascript/TagPanel.js" type="text/javascript"></script>
 		<script src="javascript/PinchLayer.js" type="text/javascript"></script>
 		<script src="javascript/CustomSwipeGesture.js" type="text/javascript"></script>
