--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="app.manifest">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
