--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="javascript/DebugPanel.js" type="text/javascript"></script>
         <script src="javascript/globals.js" type="text/javascript"></script>
 		<script src="javascript/TagPanel.js" type="text/javascript"></script>
+        <script src="javascript/Trashcan.js" type="text/javascript"></script>
 		<script src="javascript/PinchLayer.js" type="text/javascript"></script>
 		<script src="javascript/CustomSwipeGesture.js" type="text/javascript"></script>
         <script src="javascript/index.js" type="text/javascript"></script>
