--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="javascript/Trashcan.js" type="text/javascript"></script>
 		<script src="javascript/PinchLayer.js" type="text/javascript"></script>
 		<script src="javascript/CustomSwipeGesture.js" type="text/javascript"></script>
+		<script src="javascript/Artikel.js" type="text/javascript"></script>
         <script src="javascript/index.js" type="text/javascript"></script>
        
     </head>
